# image_process

./: .gitignore  deps.txt  pyproject.toml  steps_pelotas.txt
estudo_cnn/: pyproject.toml
estudo_cnn/tests/: YOLO.ipynb  daf_service.ipynb  daf_test.py  source.py
estudo_cnn/tests/dataset_custom/: testing_a_model.ipynb
estudo_cnn/tests/estudo_cnn/: daf_service_class.py
estudo_cnn/tests/formatar_dataset/: daf_service_class.py
