[tool.poetry]
name = "estudo-cnn"
version = "0.1.0"
description = ""
authors = ["j.senra <judson.nascimento@aperam.com>"]
readme = "README.md"
packages = [{include = "estudo_cnn"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.8.0.76"
ipykernel = "^6.25.2"
importlib = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
